--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jasmine-node": "^1.14.3",
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.1.4",
+    "karma-coveralls": "^0.1.4",
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4"
   },
